log/build_2025-02-25_09-43-04/ar_loc_base/stderr.log
  File "/home/GTL/pcastere/ros_hw1/ros2_hw1/install/ar_loc_base/lib/python3.10/site-packages/ar_loc_base/rover_kf.py", line 4
    from numpy import as np
                      ^^
SyntaxError: invalid syntax

